# qiskit-aqua

./: .gitignore  .mailmap  .pylintdict  .pylintrc  .stestr.conf  .travis.yml  ADAPT_VQE.ipynb  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONTRIBUTORS.rst  EXECUTION.rst  EXTENDING.rst  HHL_CHANGELOG.md  Julien_requests.docx  LDR_testing.py  LICENSE.txt  MANIFEST.in  Makefile  OLD_CHEMISTRY_CHANGELOG.md  QNN.ipynb  README.md  README.rst  UCCSD_VQE_reference.ipynb  ci-r-u-ok  constraints.txt  out.txt  pyproject.toml  qiskit-vscode-log.out  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  subtractor.py  test.py  tox.ini
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
2by2fixedrotation/: DemoHHLRealDevice.ipynb  fix_rotation.py  qiskit_example.ipynb  qpe.py
AutomatedCircuit/: automatedcircuit8bits.py  intdiv-esop0-rec5.txt  intdiv-esop0-rec6.txt  intdiv-esop0-rec7.real  intdiv-esop0-rec8.txt  integerdivision.py  nc_toffoli.py  oldparse.py  parserevkit.py  qiskit-vscode-log.out  rotationautomated.py  subtractor.py  testcirc.txt  testdouble.txt
Demo/: QPE_eigenvalues.ipynb  QPE_eigenvalues_applications.ipynb  demo_functions.py
Demos/: Eigenvalues_demo.ipynb  demo_functions.py
benchmarks/: Untitled.ipynb  Untitled1.ipynb  first_exp.py  first_exp.py.lprof
corrector/: CHANGELOG.rst  README.md  requirements-dev.txt
demo/: Demo Basic Gates.ipynb  QPE_eigenvalues.ipynb  QPE_eigenvalues_applications.ipynb  demo_functions.py  index.ipynb
design_docs/: 0.7_ansatz_design_doc.ipynb  0.7_operator_refactor.ipynb  0.7_release_priorities_and_plan.md  0002-Aqua_0.7_release_priorities_and_plan.md
docs/: ALGORITHMS.rst  AQUA_AI.rst  AQUA_CHEMISTRY.rst  AQUA_CHEMISTRY_DRIVERS.rst  AQUA_CHEMISTRY_EXECUTION.rst  AQUA_CHEMISTRY_EXTENDING.rst  AQUA_CHEMISTRY_INSTALLATION.rst  AQUA_CHEMISTRY_OVERVIEW.rst  AQUA_CHEMISTRY_TRANSLATORS.rst  AQUA_OPTIMIZATION.rst  CONTRIBUTORS.rst  EXECUTION.rst  EXTENDING.rst  INITIAL_STATES.rst  INSTALLATION.rst  IQFTS.rst  LIBRARY.rst  Makefile  OPTIMIZERS.rst  ORACLES.rst  OVERVIEW.rst  conf.py  (+43 more)
(+3131 files in other folders)
