[metadata]
name = qiskit-aqua
author = Qiskit Aqua Development Team
author_email = qiskit@us.ibm.com
license = Apache-2.0
description = Qiskit Aqua: An extensible library of quantum computing algorithms
keywords = qiskit, sdk, quantum, aqua
url = https://github.com/Qiskit/qiskit-aqua
long_description = [Qiskit Aqua](https://qiskit.org/aqua) is an extensible,
     modular, open-source library of quantum computing algorithms.
     Researchers can experiment with Aqua algorithms, on near-term quantum devices and simulators,
     and can also get involved by contributing new algorithms and algorithm-supporting objects,
     such as optimizers and variational forms.
     Qiskit Aqua also contains application domain support in the form of the chemistry, finance,
     machine learning and optimization modules to experiment with real-world applications to quantum computing.
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = find:
zip_safe = False
install_requires =
    qiskit-terra>=0.14.0
    qiskit-ignis>=0.2.0
    scipy>=1.4
    sympy>=1.3
    numpy>=1.17
    psutil>=5
    scikit-learn>=0.20.0
    dlx
    docplex
    fastdtw
    quandl
    setuptools>=40.1.0
    h5py
    networkx>=2.2
    pyscf; sys_platform != 'win32'
include_package_data = True
python_requires = >=3.5

[options.extras_require]
torch =
    torch; sys_platform == 'linux' or (python_version < '3.8' and sys_platform != 'win32')
cplex =
    cplex; python_version >= '3.6' and python_version < '3.8'
cvx = cvxpy>1.0.0,<1.1.0
